# green-agent-GAIA

./: .env.example  .gitignore  IMPLEMENTATION.md  IMPLEMENTATION_NOTES.md  README.md  requirements.txt
.github/: copilot-instructions.md
agent/: __init__.py  a2a_protocol.py  evaluator.py  gaia_loader.py  scoring.py
data/gaia/: sample_questions.json  validation_level1.json
docker/: Dockerfile  docker-compose.yml
green-evaluator/: .env.example  pyproject.toml  quickstart.py  requirements.txt
green-evaluator/agent/: evaluator.py  gaia_loader.py  green_coordinator.py  schemas.py
green-evaluator/agent/sub_agents/: __init__.py  answer_analyzer.py  quality_assessor.py  semantic_scorer.py
green-evaluator/data/gaia/: validation_complete.json  validation_level2.json  validation_level3.json
green-evaluator/docker/: entrypoint.sh
green-evaluator/scripts/: run-local.sh  setup.sh  test_purple_agent.py  transform_gaia_data.py
green-evaluator/tests/: __init__.py  test_a2a_connection.py
purple-agents/advanced/: .env.example  requirements.txt
purple-agents/advanced/purple_advanced/: README.md  __init__.py  a2a_server.py  agent.py  test_agent.py
purple-agents/advanced/purple_advanced/sub_agents/calculator/: agent.py  prompt.py
purple-agents/advanced/purple_advanced/sub_agents/deep_analyzer/: agent.py  prompt.py
purple-agents/advanced/purple_advanced/sub_agents/web_search/: agent.py  prompt.py
purple-agents/baseline/: .env.example  README.md  pyproject.toml  requirements.txt
purple-agents/baseline/purple_baseline/: __init__.py  a2a_mock_server.py  a2a_server.py  agent.py  baseline_agent.py  prompt.py
purple_advanced/: .env.example  a2a_server.py  agent.py  prompt.py  pyproject.toml
purple_advanced/sub_agents/: __init__.py
purple_advanced/sub_agents/calculator/: __init__.py  agent.py
purple_advanced/sub_agents/deep_analyzer/: __init__.py  prompt.py
purple_advanced/sub_agents/web_search/: __init__.py
purple_baseline/: __init__.py  a2a_mock_server.py  agent.py  baseline_agent.py
scripts/: demo-all-logging.sh  demo_logging.py  run-agents.py  run-agents.sh  test_llm_evaluation.py  test_loader.py
tests/: test_end_to_end.py  test_loader.py  test_scoring.py
